@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [ZBX-1643] removed edit links from search if no write access to object (Aly)
  - [ZBX-1638] added host name to link indicator (Aly)
  - [ZBX-1658] removed "Zabbix Status" from dashboard for non super admins (Aly)
  - [ZBX-1646] improved permissions check in Dashboard (Aly)
